--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,9 +7,13 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Prototype.Prototype
-GameDefaultMap=/Game/Levels/Prototype.Prototype
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/CubeArena.CubeArenaGameModeBase
+GameInstanceClass=/Script/CubeArena.CubeGameInstance
+
+[OnlineSubsystem]
+DefaultPlatformService=Null
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -55,5 +59,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
