--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -47,6 +47,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="LeftMouseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="RightMouseButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="UseAbility1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="HorizontalMovement",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="VerticalMovement",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="HorizontalMovement",Scale=1.000000,Key=D)
